image stored in mongodb and server but while looping html code with dynmic image names are rendured

--- a/views/about-1.ejs
+++ b/views/about-1.ejs
@@ -610,7 +610,7 @@
                                     <h4 class="pre-footer-title">BURNER & HEAT PUMP SALES</h4>
     
                                     <p>MOB :+91 6238811826,9562418266
-                                        <br>suntecsales@sreelakshmi.info
+                                        <br>retailsales@sreelakshmi.info
                                     </p>
                                 </div>
                             </div>
