--- a/views/product-2.ejs
+++ b/views/product-2.ejs
@@ -323,7 +323,7 @@
                                     <h4 class="pre-footer-title">BURNER & HEAT PUMP SALES</h4>
     
                                     <p>+91 6238811826,9562418266
-                                        <br>suntecsales@sreelakshmi.info
+                                        <br>retailsales@sreelakshmi.info
                                     </p>
                                 </div>
                             </div>
