--- a/views/index.html
+++ b/views/index.html
@@ -18,16 +18,16 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="../public/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="../public/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="../public/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="../public/vendor/quill/quill.snow.css" rel="stylesheet">
-  <link href="../public/vendor/quill/quill.bubble.css" rel="stylesheet">
-  <link href="../public/vendor/remixicon/remixicon.css" rel="stylesheet">
-  <link href="../public/vendor/simple-datatables/style.css" rel="stylesheet">
+  <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="/vendor/quill/quill.snow.css" rel="stylesheet">
+  <link href="/vendor/quill/quill.bubble.css" rel="stylesheet">
+  <link href="/vendor/remixicon/remixicon.css" rel="stylesheet">
+  <link href="/vendor/simple-datatables/style.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="../public/css/adminStyle.css" rel="stylesheet">
+  <link href="/css/adminStyle.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: NiceAdmin
@@ -126,55 +126,45 @@
       </li><!-- End Dashboard Nav -->
 
       <li class="nav-item">
-        <a class="nav-link collapsed" data-bs-target="#components-nav" data-bs-toggle="collapse" href="#">
-          <i class="bi bi-menu-button-wide"></i><span>Products</span><i class="bi bi-chevron-down ms-auto"></i>
+        <a class="nav-link " data-bs-target="#forms-nav" data-bs-toggle="collapse" href="#">
+          <i class="#forms-nav"></i><span>Products</span><i class="bi bi-chevron-down ms-auto"></i>
         </a>
-        <ul id="components-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
+        <ul id="forms-nav" class="nav-content collapse show " data-bs-parent="#sidebar-nav">
           <li>
-            <a href=" #">
+            <a href="form-AllProducts.html">
               <i class="bi bi-circle"></i><span>All Products</span>
             </a>
           </li>
           <li>
-            <a href=" #">
+            <a href="form-CommercialBurnersAndFittings.html">
               <i class="bi bi-circle"></i><span>Commercial Burners And Fittings</span>
             </a>
           </li>
           <li>
-            <a href=" #">
+            <a href="form-CopperTube.html">
               <i class="bi bi-circle"></i><span>Copper Tube</span>
             </a>
           </li>
           <li>
-            <a href=" #">
+            <a href="form-DetectionSystem.html">
               <i class="bi bi-circle"></i><span>Detection System</span>
             </a>
           </li>
           <li>
-            <a href=" #">
+            <a href="form-Flow Meters.html">
               <i class="bi bi-circle"></i><span>Flow Meters</span>
             </a>
           </li>
           <li>
-            <a href=" #">
+            <a href="form-CoppertubeandPigtails.html">
               <i class="bi bi-circle"></i><span>Copper tube and Pigtails</span>
             </a>
           </li>
           <li>
-            <a href=" #">
+            <a href="form-Regulators.html">
               <i class="bi bi-circle"></i><span>Regulators</span>
             </a>
           </li>
-          <li>
-            <a href=" #">
-              <i class="bi bi-circle"></i><span>Suntec and Relio burners</span>
-            </a>
-          </li>
-          <li>
-            <a href=" #">
-              <i class="bi bi-circle"></i><span>LOT Skid System</span>
-            </a>
-          </li> 
           
         </ul>
       </li><!-- End Components Nav -->
@@ -185,42 +175,42 @@
         </a>
         <ul id="forms-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
           <li>
-            <a href="forms-elements.html">
+            <a href="form-FuelConversion.html">
               <i class="bi bi-circle"></i><span>Fuel Conversion</span>
             </a>
           </li>
           <li>
-            <a href="forms-layouts.html">
+            <a href="forms-CommercialGasPipeInstallation.html">
               <i class="bi bi-circle"></i><span>Commercial Gas Pipe Installation</span>
             </a>
           </li>
           <li>
-            <a href="forms-editors.html">
+            <a href="forms-ReticulatedGasSystem.html">
               <i class="bi bi-circle"></i><span>Reticulated Gas System</span>
             </a>
           </li>
           <li>
-            <a href="forms-validation.html">
+            <a href="forms-GasLeakageDetectionSystem.html">
               <i class="bi bi-circle"></i><span>Gas Leakage Detection System</span>
             </a>
           </li>
           <li>
-            <a href="forms-validation.html">
+            <a href="forms-PipedNaturalGasInstallation.html">
               <i class="bi bi-circle"></i><span>Piped Natural Gas Installation</span>
             </a>
           </li>
           <li>
-            <a href="forms-validation.html">
+            <a href="forms-AMCandMaintenance.html">
               <i class="bi bi-circle"></i><span>AMC and Maintenance</span>
             </a>
           </li>
           <li>
-            <a href="forms-validation.html">
+            <a href="forms-OurOffice.html">
               <i class="bi bi-circle"></i><span>Our Office</span>
             </a>
           </li>
           <li>
-            <a href="forms-validation.html">
+            <a href="forms-OurStore.html">
               <i class="bi bi-circle"></i><span>Our Store</span>
             </a>
           </li>
@@ -293,120 +283,39 @@
 
     <section class="section dashboard">
       <div class="row">
+      </div>
+    </section>
 
-        <!-- Left side columns -->
-        <div class="col-lg-8">
-          <div class="row">
+    <section class="section">
+      <div class="row">
+        <div class="col-lg-12">
 
-            <!-- Sales Card -->
-            <div class="col-xxl-4 col-md-6">
-              <div class="card info-card sales-card">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">General Form Elements</h5>
 
-                <div class="filter">
-                  <a class="icon" href="#" data-bs-toggle="dropdown"><i class="bi bi-three-dots"></i></a>
-                  <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
-                    <li class="dropdown-header text-start">
-                      <h6>Filter</h6>
-                    </li>
-
-                    <li><a class="dropdown-item" href="#">Today</a></li>
-                    <li><a class="dropdown-item" href="#">This Month</a></li>
-                    <li><a class="dropdown-item" href="#">This Year</a></li>
-                  </ul>
-                </div>
-
-                <div class="card-body">
-                  <h5 class="card-title">Sales <span>| Today</span></h5>
-
-                  <div class="d-flex align-items-center">
-                    <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
-                      <i class="bi bi-cart"></i>
-                    </div>
-                    <div class="ps-3">
-                      <h6>145</h6>
-                      <span class="text-success small pt-1 fw-bold">12%</span> <span class="text-muted small pt-2 ps-1">increase</span>
-
-                    </div>
+              <!-- General Form Elements -->
+              <form action="/careers.html" method="post">
+                <div class="row mb-3">
+                  <label for="inputNumber" class="col-sm-2 col-form-label">File Upload</label>
+                  <div class="col-sm-10">
+                    <input class="form-control" type="file" id="formFile">
                   </div>
                 </div>
 
-              </div>
-            </div><!-- End Sales Card -->
-
-            <!-- Revenue Card -->
-            <div class="col-xxl-4 col-md-6">
-              <div class="card info-card revenue-card">
-
-                <div class="filter">
-                  <a class="icon" href="#" data-bs-toggle="dropdown"><i class="bi bi-three-dots"></i></a>
-                  <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
-                    <li class="dropdown-header text-start">
-                      <h6>Filter</h6>
-                    </li>
-
-                    <li><a class="dropdown-item" href="#">Today</a></li>
-                    <li><a class="dropdown-item" href="#">This Month</a></li>
-                    <li><a class="dropdown-item" href="#">This Year</a></li>
-                  </ul>
-                </div>
-
-                <div class="card-body">
-                  <h5 class="card-title">Revenue <span>| This Month</span></h5>
-
-                  <div class="d-flex align-items-center">
-                    <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
-                      <i class="bi bi-currency-dollar"></i>
-                    </div>
-                    <div class="ps-3">
-                      <h6>$3,264</h6>
-                      <span class="text-success small pt-1 fw-bold">8%</span> <span class="text-muted small pt-2 ps-1">increase</span>
-
-                    </div>
+                <div class="row mb-3">
+                  <label class="col-sm-2 col-form-label">Upload image</label>
+                  <div class="col-sm-10">
+                    <button type="submit" class="btn btn-primary">Upload image</button>
                   </div>
                 </div>
 
-              </div>
-            </div><!-- End Revenue Card -->
+              </form><!-- End General Form Elements -->
 
-            <!-- Customers Card -->
-            <div class="col-xxl-4 col-xl-12">
-
-              <div class="card info-card customers-card">
-
-                <div class="filter">
-                  <a class="icon" href="#" data-bs-toggle="dropdown"><i class="bi bi-three-dots"></i></a>
-                  <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
-                    <li class="dropdown-header text-start">
-                      <h6>Filter</h6>
-                    </li>
-
-                    <li><a class="dropdown-item" href="#">Today</a></li>
-                    <li><a class="dropdown-item" href="#">This Month</a></li>
-                    <li><a class="dropdown-item" href="#">This Year</a></li>
-                  </ul>
-                </div>
-
-                <div class="card-body">
-                  <h5 class="card-title">Customers <span>| This Year</span></h5>
-
-                  <div class="d-flex align-items-center">
-                    <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
-                      <i class="bi bi-people"></i>
-                    </div>
-                    <div class="ps-3">
-                      <h6>1244</h6>
-                      <span class="text-danger small pt-1 fw-bold">12%</span> <span class="text-muted small pt-2 ps-1">decrease</span>
-
-                    </div>
-                  </div>
-
-                </div>
-              </div>
-
-            </div><!-- End Customers Card -->
+            </div>
           </div>
-        </div><!-- End Left side columns -->
 
+        </div>
       </div>
     </section>
 
@@ -427,17 +336,18 @@
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
-  <script src="../public/vendor/apexcharts/apexcharts.min.js"></script>
-  <script src="../public/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="../public/vendor/chart.js/chart.umd.js"></script>
-  <script src="../public/vendor/echarts/echarts.min.js"></script>
-  <script src="../public/vendor/quill/quill.min.js"></script>
-  <script src="../public/vendor/simple-datatables/simple-datatables.js"></script>
-  <script src="../public/vendor/tinymce/tinymce.min.js"></script>
-  <script src="../public/vendor/php-email-form/validate.js"></script>
+  <script src="/vendor/apexcharts/apexcharts.min.js"></script>
+  <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="/vendor/chart.js/chart.umd.js"></script>
+  <script src="/vendor/echarts/echarts.min.js"></script>
+  <script src="/vendor/quill/quill.min.js"></script>
+  <script src="/vendor/simple-datatables/simple-datatables.js"></script>
+  <script src="/vendor/tinymce/tinymce.min.js"></script>
+  <script src="/vendor/php-email-form/validate.js"></script>
+
 
   <!-- Template Main JS File -->
-  <script src="../public/js/adminMain.js"></script>
+  <script src="/js/adminMain.js"></script>
 
 </body>
 
