--- a/views/pages-register.html
+++ b/views/pages-register.html
@@ -18,16 +18,16 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="../public/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="../public/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="../public/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="../public/vendor/quill/quill.snow.css" rel="stylesheet">
-  <link href="../public/vendor/quill/quill.bubble.css" rel="stylesheet">
-  <link href="../public/vendor/remixicon/remixicon.css" rel="stylesheet">
-  <link href="../public/vendor/simple-datatables/style.css" rel="stylesheet">
+  <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="/vendor/quill/quill.snow.css" rel="stylesheet">
+  <link href="/vendor/quill/quill.bubble.css" rel="stylesheet">
+  <link href="/vendor/remixicon/remixicon.css" rel="stylesheet">
+  <link href="/vendor/simple-datatables/style.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="../public/css/adminStyle.css" rel="stylesheet">
+  <link href="/css/adminStyle.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: NiceAdmin
@@ -130,17 +130,18 @@
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
-  <script src="../public/vendor/apexcharts/apexcharts.min.js"></script>
-  <script src="../public/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="../public/vendor/chart.js/chart.umd.js"></script>
-  <script src="../public/vendor/echarts/echarts.min.js"></script>
-  <script src="../public/vendor/quill/quill.min.js"></script>
-  <script src="../public/vendor/simple-datatables/simple-datatables.js"></script>
-  <script src="../public/vendor/tinymce/tinymce.min.js"></script>
-  <script src="../public/vendor/php-email-form/validate.js"></script>
+  <script src="/vendor/apexcharts/apexcharts.min.js"></script>
+  <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="/vendor/chart.js/chart.umd.js"></script>
+  <script src="/vendor/echarts/echarts.min.js"></script>
+  <script src="/vendor/quill/quill.min.js"></script>
+  <script src="/vendor/simple-datatables/simple-datatables.js"></script>
+  <script src="/vendor/tinymce/tinymce.min.js"></script>
+  <script src="/vendor/php-email-form/validate.js"></script>
+
 
   <!-- Template Main JS File -->
-  <script src="../public/js/adminMain.js"></script>
+  <script src="/js/adminMain.js"></script>
 
 </body>
 
