--- a/views/users-profile.html
+++ b/views/users-profile.html
@@ -18,16 +18,16 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="../public/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="../public/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="../public/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="../public/vendor/quill/quill.snow.css" rel="stylesheet">
-  <link href="../public/vendor/quill/quill.bubble.css" rel="stylesheet">
-  <link href="../public/vendor/remixicon/remixicon.css" rel="stylesheet">
-  <link href="../public/vendor/simple-datatables/style.css" rel="stylesheet">
+  <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="/vendor/quill/quill.snow.css" rel="stylesheet">
+  <link href="/vendor/quill/quill.bubble.css" rel="stylesheet">
+  <link href="/vendor/remixicon/remixicon.css" rel="stylesheet">
+  <link href="/vendor/simple-datatables/style.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="../public/css/adminStyle.css" rel="stylesheet">
+  <link href="/css/adminStyle.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: NiceAdmin
@@ -126,42 +126,42 @@
       </li><!-- End Dashboard Nav -->
 
       <li class="nav-item">
-        <a class="nav-link collapsed" data-bs-target="#components-nav" data-bs-toggle="collapse" href="#">
-          <i class="bi bi-menu-button-wide"></i><span>Products</span><i class="bi bi-chevron-down ms-auto"></i>
+        <a class="nav-link " data-bs-target="#forms-nav" data-bs-toggle="collapse" href="#">
+          <i class="#forms-nav"></i><span>Products</span><i class="bi bi-chevron-down ms-auto"></i>
         </a>
-        <ul id="components-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
+        <ul id="forms-nav" class="nav-content collapse show " data-bs-parent="#sidebar-nav">
           <li>
-            <a href=" #">
+            <a href="form-AllProducts.html">
               <i class="bi bi-circle"></i><span>All Products</span>
             </a>
           </li>
           <li>
-            <a href=" #">
+            <a href="form-CommercialBurnersAndFittings.html">
               <i class="bi bi-circle"></i><span>Commercial Burners And Fittings</span>
             </a>
           </li>
           <li>
-            <a href=" #">
+            <a href="form-CopperTube.html">
               <i class="bi bi-circle"></i><span>Copper Tube</span>
             </a>
           </li>
           <li>
-            <a href=" #">
+            <a href="form-DetectionSystem.html">
               <i class="bi bi-circle"></i><span>Detection System</span>
             </a>
           </li>
           <li>
-            <a href=" #">
+            <a href="form-Flow Meters.html">
               <i class="bi bi-circle"></i><span>Flow Meters</span>
             </a>
           </li>
           <li>
-            <a href=" #">
+            <a href="form-CoppertubeandPigtails.html">
               <i class="bi bi-circle"></i><span>Copper tube and Pigtails</span>
             </a>
           </li>
           <li>
-            <a href=" #">
+            <a href="form-Regulators.html">
               <i class="bi bi-circle"></i><span>Regulators</span>
             </a>
           </li>
@@ -185,42 +185,42 @@
         </a>
         <ul id="forms-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
           <li>
-            <a href="forms-elements.html">
+            <a href="form-FuelConversion.html">
               <i class="bi bi-circle"></i><span>Fuel Conversion</span>
             </a>
           </li>
           <li>
-            <a href="forms-layouts.html">
+            <a href="forms-CommercialGasPipeInstallation.html">
               <i class="bi bi-circle"></i><span>Commercial Gas Pipe Installation</span>
             </a>
           </li>
           <li>
-            <a href="forms-editors.html">
+            <a href="forms-ReticulatedGasSystem.html">
               <i class="bi bi-circle"></i><span>Reticulated Gas System</span>
             </a>
           </li>
           <li>
-            <a href="forms-validation.html">
+            <a href="forms-GasLeakageDetectionSystem.html">
               <i class="bi bi-circle"></i><span>Gas Leakage Detection System</span>
             </a>
           </li>
           <li>
-            <a href="forms-validation.html">
+            <a href="forms-PipedNaturalGasInstallation.html">
               <i class="bi bi-circle"></i><span>Piped Natural Gas Installation</span>
             </a>
           </li>
           <li>
-            <a href="forms-validation.html">
+            <a href="forms-AMCandMaintenance.html">
               <i class="bi bi-circle"></i><span>AMC and Maintenance</span>
             </a>
           </li>
           <li>
-            <a href="forms-validation.html">
+            <a href="forms-OurOffice.html">
               <i class="bi bi-circle"></i><span>Our Office</span>
             </a>
           </li>
           <li>
-            <a href="forms-validation.html">
+            <a href="forms-OurStore.html">
               <i class="bi bi-circle"></i><span>Our Store</span>
             </a>
           </li>
@@ -393,17 +393,18 @@
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
-  <script src="../public/vendor/apexcharts/apexcharts.min.js"></script>
-  <script src="../public/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="../public/vendor/chart.js/chart.umd.js"></script>
-  <script src="../public/vendor/echarts/echarts.min.js"></script>
-  <script src="../public/vendor/quill/quill.min.js"></script>
-  <script src="../public/vendor/simple-datatables/simple-datatables.js"></script>
-  <script src="../public/vendor/tinymce/tinymce.min.js"></script>
-  <script src="../public/vendor/php-email-form/validate.js"></script>
+  <script src="/vendor/apexcharts/apexcharts.min.js"></script>
+  <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="/vendor/chart.js/chart.umd.js"></script>
+  <script src="/vendor/echarts/echarts.min.js"></script>
+  <script src="/vendor/quill/quill.min.js"></script>
+  <script src="/vendor/simple-datatables/simple-datatables.js"></script>
+  <script src="/vendor/tinymce/tinymce.min.js"></script>
+  <script src="/vendor/php-email-form/validate.js"></script>
+
 
   <!-- Template Main JS File -->
-  <script src="../public/js/adminMain.js"></script>
+  <script src="/js/adminMain.js"></script>
 
 </body>
 
